test/typechecker.d/invalid/export1.surc.bad
module export1 where
	two: Integer

two = "two"
